[package]
name = "map_view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shapefile = "0.3.0"
serde_derive = "1.0.141"
serde = "1.0.141"
toml = "0.5.9"
geo-types = "0.7.4"
crossterm = "0.24.0"
ratatui = "0.26.1"
procfs = "0.15.1"
tokio = { version = "1.32.0", features = ["full"] }
ipgeolocate = "0.3.5"
anyhow = "1.0.75"
log = "0.4.20"
simple-logging = "2.0.2"
public-ip = "0.2.2"
itertools = "0.11.0"
env_logger = "0.10.0"
