[package]
name = "geohog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "debug"
path = "src/debug.rs"

[dependencies]
shapefile = "0.6.0"
serde_derive = "1.0.141"
serde = "1.0.141"
toml = "0.5.9"
geo-types = "0.7.4"
crossterm = "0.24.0"
ratatui = "0.26.1"
procfs = "0.15.1"
tokio = { version = "1.32.0", features = ["full"] }
ipgeolocate = "0.3.5"
anyhow = "1.0.75"
log = "0.4.20"
simple-logging = "2.0.2"
public-ip = "0.2.2"
itertools = "0.11.0"
env_logger = "0.10.0"
clap = { version = "4.5.4", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["time"] }
time = { version = "0.3.30", features = ["formatting", "macros", "local-offset"] }
tracing = "0.1.40"
home = "0.5.9"
lru = "0.12.3"
lazy_static = "1.4.0"
netstat2 = "0.9.1"
